<resources>
    <string name="app_name">Tienda Virtual</string>
    <string name="edit_username">Nombre de usuario</string>
    <string name="edit_password">Contraseña</string>
    <string name="radio_cliente">Acceso cliente</string>
    <string name="radio_admin">Acceso administrador</string>
    <string name="button_login">Acceder</string>
    <string name="button_hacerPedido">Hacer pedido</string>
    <string name="button_pedidosEnTramite">Ver pedidos en trámite</string>
    <string name="button_comprasRealizadas">Ver compras realizadas</string>
    <string name="button_salir">Salir</string>
    <string name="label_categorias">Categoría:</string>
    <string name="label_productos">Productos:</string>
    <string name="label_cantidad">Cantidad:</string>
    <string name="button_siguiente">Siguiente</string>
    <string name="edit_direccion">Dirección de envío</string>
    <string name="edit_ciudad">Ciudad</string>
    <string name="edit_cp">Código Postal</string>
    <string name="button_finalizar">Finalizar</string>
</resources>
